<resources>
    <string name="app_name">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="clouds">Clouds</string>
    <string name="go_to_location_settings_dialog_title">Request to open location ٍsettings</string>
    <string name="go_to_location_settings_dialog_msg">please allow go to ٍsettings and open location </string>
    <string name="initialSetup">Initial Setup</string>
    <string name="pleaseSelectLocationOption">Please select an option for detecting location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="hPa">hPa</string>
    <string name="confirmLocation">Confirm Location</string>
    <string name="tempreature">Tempreature</string>
    <string name="speed">Speed</string>
    <string name="language">Language</string>
    <string name="location">Location</string>
    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="maps">Maps</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>
    <string name="miles_hour">mph</string>
    <string name="meter_sec">m/s</string>
    <string name="set_alert">Set Alert</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="save">Save</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
</resources>